--- a/index.html
+++ b/index.html
@@ -8,35 +8,49 @@
 </head>
 <body>
   <div class="form-container">
-    <h2>Admission Form</h2>
+    <h1>🎓 Admission Form</h1>
     <form action="#" method="post">
-      <label for="fullname">Full Name:</label>
-      <input type="text" id="fullname" name="fullname" required>
+      <div class="form-group">
+        <label for="fullname">Full Name</label>
+        <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
+      </div>
 
-      <label for="dob">Date of Birth:</label>
-      <input type="date" id="dob" name="dob" required>
+      <div class="form-group">
+        <label for="dob">Date of Birth</label>
+        <input type="date" id="dob" name="dob" required>
+      </div>
 
-      <label for="gender">Gender:</label>
-      <select id="gender" name="gender" required>
-        <option value="">Select</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
-      </select>
+      <div class="form-group">
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender" required>
+          <option value="">Select</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="example@mail.com" required>
+      </div>
 
-      <label for="phone">Phone Number:</label>
-      <input type="tel" id="phone" name="phone" required>
+      <div class="form-group">
+        <label for="phone">Phone Number</label>
+        <input type="tel" id="phone" name="phone" placeholder="+91 9876543210" required>
+      </div>
 
-      <label for="address">Address:</label>
-      <textarea id="address" name="address" rows="3" required></textarea>
+      <div class="form-group">
+        <label for="address">Address</label>
+        <textarea id="address" name="address" rows="3" placeholder="Enter your address" required></textarea>
+      </div>
 
-      <label for="course">Course Applying For:</label>
-      <input type="text" id="course" name="course" required>
+      <div class="form-group">
+        <label for="course">Course Applying For</label>
+        <input type="text" id="course" name="course" placeholder="e.g. Computer Science" required>
+      </div>
 
-      <button type="submit">Submit</button>
+      <button type="submit">Submit Application</button>
     </form>
   </div>
 </body>
