--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Event Registration Form</title>
+  <title>Admission Form</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="form-container">
-    <h1>🎉 Event Registration</h1>
+    <h1>🎓 Admission Form</h1>
     <form action="#" method="post">
       
       <div class="form-group">
         <label for="fullname">Full Name</label>
         <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="dob">Date of Birth</label>
+        <input type="date" id="dob" name="dob" required>
+      </div>
+
+      <div class="form-group">
+        <label for="gender">Gender</label>
+        <select id="gender" name="gender" required>
+          <option value="">Select</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select>
       </div>
 
       <div class="form-group">
@@ -27,27 +42,16 @@
       </div>
 
       <div class="form-group">
-        <label for="event">Select Event</label>
-        <select id="event" name="event" required>
-          <option value="">Choose an event</option>
-          <option value="music">Music Concert</option>
-          <option value="tech">Tech Conference</option>
-          <option value="sports">Sports Meet</option>
-          <option value="workshop">Workshop</option>
-        </select>
+        <label for="address">Address</label>
+        <textarea id="address" name="address" rows="3" placeholder="Enter your address" required></textarea>
       </div>
 
       <div class="form-group">
-        <label for="tickets">Number of Tickets</label>
-        <input type="number" id="tickets" name="tickets" min="1" max="10" required>
+        <label for="course">Course Applying For</label>
+        <input type="text" id="course" name="course" placeholder="e.g. Computer Science" required>
       </div>
 
-      <div class="form-group">
-        <label for="comments">Additional Notes</label>
-        <textarea id="comments" name="comments" rows="3" placeholder="Any special requests..."></textarea>
-      </div>
-
-      <button type="submit">Register Now</button>
+      <button type="submit">Submit Application</button>
     </form>
   </div>
 </body>
